--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "vue": "^2.6.11"
   },
@@ -18,6 +19,9 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "vue-cli-plugin-tailwind": "~1.4.0",
+    "vue-cli-plugin-tailwind-purge-css": "^0.1.4",
+    "vue-select": "^3.10.3",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
