Rename to Critter Collector

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "acnh-creature-collector",
+  "name": "acnh-critter-collector",
   "version": "0.1.0",
   "private": true,
   "scripts": {
