--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start": "vue-cli-service serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
@@ -24,7 +25,6 @@
     "eslint-plugin-vue": "^6.2.2",
     "vue-cli-plugin-tailwind": "~1.4.0",
     "vue-cli-plugin-tailwind-purge-css": "^0.1.4",
-    "vue-select": "^3.10.3",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
