--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@fortawesome/vue-fontawesome": "^0.1.9",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-gtag": "^1.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
